# OmegaFitting

./: .gitignore  Blinders.cc  CMakeLists.txt  EScan.cpp  FitTools.cpp  FitTools.h  Main.cxx  MakeWiggles.py  README.md  Run23FullFit.cpp  Run23GainSystScan.cpp  Run4U.cxx  Run4UFit_preliminary.cpp  TmethodFit.cpp  compile.sh  convert_lm_unit.py  example.json  initialize_inpac.sh  launch.py  launch_fitter.py  launch_fitter_condor.py  launch_fitter_run2.py  main.cpp  pileup_scan.condor  pocketfft_hdronly.h  run.sh  run4_baseline_T.json  run_calo_scan.sh  run_scan.sh  run_seed_scan.sh  run_start_time.sh  seed_scan.condor  test.cxx  trans.py
Fitter/: CMakeLists.txt  FitTools.cpp  FitTools.h  configure.h.in  configure_version.h.in  eu_fit_function.h  functions.h  functions_run456.h  functions_run456_new.h  new_functions.h  old_functions.h
Fitter/Blinders/: CMakeLists.txt
Fitter/Blinders/python_interface/: BlindersPy3.py
Fitter/Blinders/src/: Blinders.cc
configs/: CBOSyst.json  Energy_thre_scan.json  Pileup_wo_A_yk.json  adhoc_run3.json  calo_fit.json  calo_fit_Rwave.json  calo_fit_kloss.json  cbo_syst.json  energy_scan_test_fix.json  example.json  muon_loss_syst.json  pseudo_data_cbo_syst.json  run23_default_seed_scan.json  run23_default_seed_scan_individual_LM.json  run23_energy_bin_scan.json  run23_seedscan_note.json  run23_start_time_scan.json  test_ykh.json  timeCorrection.json  time_assignment.json
macros/: Compare_kLoss.py  EnergySlicesFitAna.py  ExtractParameters.py  ExtractParametersX.py  slices_fit.sh  slices_fit_local.sh
scripts/: LM_integral.py  convert_lm_unit.py  trans.py
